-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Fully Compatible
-
ALL
-
Execution Team 2022-11-14
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Dereference null return value
If the function actually returns a null value, a null pointer dereference will occur. Return value of function which returns null is dereferenced without checking
/src/mongo/db/catalog/collection_impl.cpp:463: NULL_RETURNS 133990 Assigning: "desc" = "nullptr" return value from "findIndexByName".