SERVER-70589: Coverity analysis defect 133990: Dereference null return value